# mcp-pyproject-docs

./: .editorconfig  README.md  Taskfile.yaml  lefthook.yaml  pyproject.toml  renovate.json5
src/mcp_pyproject_docs/: __init__.py  __main__.py
