[project]
name = "mcp-pyproject-docs"
version = "0.0.0"
description = "MCP server for search document of Python projects."
readme = "README.md"
authors = [
    { name = "Kazuya Takei", email = "myself@attakei.net" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
