[project]
name = "mcp-pyproject-docs"
version = "0.0.0"
description = "MCP server for search document of Python projects."
readme = "README.md"
authors = [
    { name = "Kazuya Takei", email = "myself@attakei.net" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.10",
    "ty>=0.0.1a6",
]
